--- a/01 - JavaScript Drum Kit/index-FINISHED.html
+++ b/01 - JavaScript Drum Kit/index-FINISHED.html
@@ -76,6 +76,23 @@
   const keys = Array.from(document.querySelectorAll('.key'));
   keys.forEach(key => key.addEventListener('transitionend', removeTransition));
   window.addEventListener('keydown', playSound);
+  
+    //function for mobile device support
+  function playSound2(e){
+        let divPressed = this.getAttribute("data-key");
+        const audio = document.querySelector(`audio[data-key="${divPressed}"]`);
+        const divBeing = document.querySelector(`.key[data-key="${divPressed}"]`);
+        audio.currentTime = 0;
+        audio.play();
+        divBeing.classList.add("playing");
+
+      }
+      
+      //programming for mobile devices
+      const buttonPressed = document.querySelectorAll(".key");
+      buttonPressed.forEach((key) =>{
+        key.addEventListener("click", playSound2)
+      });
 </script>
 
 
